objects/Appeal__c.object
<CustomObject>
    <description>This object is used when a dealership is credited, given free training, or both.</description>
    <fields>
        <fullName>AG__c</fullName>
        <label>AG?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Current__c</fullName>
        <label>Account Current?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Region__c</fullName>
        <formula>Dealership_Name__r.Territory_Name__c</formula>
        <inlineHelpText>formula field that reads the territory name from the account associated with the appeal</inlineHelpText>
        <label>Account Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>IF( RecordType.DeveloperName = &quot;vAuto&quot;,  Dealership_Name__r.vAuto_Account_Number__c ,  Dealership_Name__r.AccountNumber )</formula>
        <label>Account #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activation_Date__c</fullName>
        <label>Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <label>Agreement?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Amount_Approved__c</fullName>
        <label>Amount Approved</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Amount_Requested_Credit__c</fullName>
        <label>Appeal Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Requested_Training__c</fullName>
        <label>Amount of Training Requested</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Amount_of_Training_Days_Requested__c</fullName>
        <inlineHelpText>Must be a whole number. Please put other details in the &apos;How was this evaluated?&apos; field.</inlineHelpText>
        <label>Amount of Training Days Requested</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Appeal_Age__c</fullName>
        <formula>IF( ISBLANK(Date_Approved__c ), Today()- Date_Submitted_for_Approval__c,  Date_Approved__c -Date_Submitted_for_Approval__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>days waiting to be approved after it has been submitted</inlineHelpText>
        <label>Days Waiting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Appeal_Name__c</fullName>
        <formula>TEXT(Type_of_Credit__c) &amp;&quot;-&quot;&amp;  TEXT(Why_are_we_issuing_credit__c) &amp;&quot;-&quot;&amp;  Dealership_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Appeal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appeal_Owner_id__c</fullName>
        <formula>OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Appeal Owner id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appeal_Status__c</fullName>
        <label>Appeal Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Working</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Save Team Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Completion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Churned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need More Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Final Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Submitter_Email__c</fullName>
        <label>Approval Submitter Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Approver_Notes__c</fullName>
        <label>Approver Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Haystak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vAuto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VinSolutions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cancellation_Notes__c</fullName>
        <label>Cancellation Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cancellation_Notification_Date__c</fullName>
        <label>Cancellation Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Number</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Appeals</relationshipLabel>
        <relationshipName>Appeals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Churn_Controllable__c</fullName>
        <label>Controllable Churn</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Churn_PM_Commission__c</fullName>
        <label>PM Commission Churn</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Churn_Uncontrollable__c</fullName>
        <label>Uncontrollable Churn</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Dealer_Contact_Name__r.Email</formula>
        <inlineHelpText>formual field that reads the Dealership Contact Name&apos;s email address - used for email templates</inlineHelpText>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Work_Phone__c</fullName>
        <formula>Dealer_Contact_Name__r.Phone</formula>
        <inlineHelpText>formula field that reads the contact phone # - so it can be used for merge templates</inlineHelpText>
        <label>Contact Work Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month to Month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Applied__c</fullName>
        <inlineHelpText>yes = a one time credit was applied to the account
no= applies to a downgrade and did not have to issue credit</inlineHelpText>
        <label>Credit Applied?</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Note_Number__c</fullName>
        <label>Credit Note Number</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Requested__c</fullName>
        <label>Credit Requested?</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Account_Balance__c</fullName>
        <label>Current Account Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_PM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>lookup the current PM assigned to this customer</inlineHelpText>
        <label>vAuto PM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Appeals2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Approved__c</fullName>
        <description>Date the Appeal went through Final Approval</description>
        <inlineHelpText>Date the Appeal went through Final Approval</inlineHelpText>
        <label>Date Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Credited__c</fullName>
        <description>Date that credit is effective to monetary purposes.</description>
        <inlineHelpText>Date that credit is effective to monetary purposes.</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Proposal_Sent__c</fullName>
        <label>Date Proposal Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Saved__c</fullName>
        <label>Date Saved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Submitted_for_Approval__c</fullName>
        <inlineHelpText>updated by the approval process</inlineHelpText>
        <label>Date Submitted for Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Data_Extract_Handoff__c</fullName>
        <label>Date of Data Extract Handoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_on_System__c</fullName>
        <formula>Cancellation_Notification_Date__c - Activation_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>formula field that calculates the # of days from the cancellation notice date from the activation type</inlineHelpText>
        <label>Days on System</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer_Contact_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Dealer Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Appeals</relationshipLabel>
        <relationshipName>Appeals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealership_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Dealership Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Appeals</relationshipLabel>
        <relationshipName>Appeals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deposit_Amount__c</fullName>
        <label>Deposit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deposit_Paid__c</fullName>
        <label>Deposit Paid</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_Trail__c</fullName>
        <inlineHelpText>Copy-paste the previous email trail into this field, so it gets attached to the email that goes out.</inlineHelpText>
        <label>Email Trail</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Exception__c</fullName>
        <label>Exception</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Final_Confirmation_Call_Complete__c</fullName>
        <label>Final Confirmation Call Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Free_Training_Requested__c</fullName>
        <label>Free Training Requested?</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_was_this_evaluated__c</fullName>
        <label>Appeal Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Solid_Engagement__c</fullName>
        <formula>Related_POA__r.Last_Solid_Engagement__c</formula>
        <inlineHelpText>formula field that reads the last solid engagement field contents from the related POA</inlineHelpText>
        <label>Last Solid Engagement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Launch_Date__c</fullName>
        <formula>Dealership_Name__r.Implementation_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Link_to_Appeal__c</fullName>
        <formula>HYPERLINK(  Id  , &quot;Link to Appeal&quot;)</formula>
        <label>Link to Appeal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRR__c</fullName>
        <formula>Dealership_Name__r.VinSolutions_Spend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula field that reads the Vin Billed Recurring Revenue field from the related Account</inlineHelpText>
        <label>Vin MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Months_on_System__c</fullName>
        <formula>Days_on_System__c /30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>formula field that divides the days on system by 30</inlineHelpText>
        <label>Months on System</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Provider__c</fullName>
        <inlineHelpText>If this is for a cancellation, what is the new provider they are going to?</inlineHelpText>
        <label>New Provider</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Vendor__c</fullName>
        <label>New Vendor</label>
        <picklist>
            <controllingField>Primary_Reason_for_Cancellation__c</controllingField>
            <picklistValues>
                <fullName>AAX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eCarlist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eleads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DealerTrack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Look</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red Bumper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VinSolutions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Appeals</relationshipLabel>
        <relationshipName>Appeals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Originating_Salesperson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>lookup the user that was the originating salesperson of the product sold</inlineHelpText>
        <label>Originating Salesperson</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Appeals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_Email__c</fullName>
        <formula>Owner:User.Outlook_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Manager__c</fullName>
        <formula>Owner:User.Reports_To__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <formula>Owner:User.Outlook_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Role__c</fullName>
        <formula>Owner:User.UserRole.Name</formula>
        <label>Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM__c</fullName>
        <formula>Dealership_Name__r.Account_Manager__c</formula>
        <inlineHelpText>formula field that looks up the PM from the account</inlineHelpText>
        <label>PM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POA_Type__c</fullName>
        <formula>TEXT(Related_POA__r.POA_Subtype__c)</formula>
        <label>POA Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <formula>Dealership_Name__r.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Approval_By__c</fullName>
        <inlineHelpText>updated by the approval process to show who the approval process is waiting on</inlineHelpText>
        <label>Pending Approval By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pieces_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hidden field updated by Flow that generates Appeal Pieces. When Flow finishes, this is checked. Used in reporting and workflow.</description>
        <inlineHelpText>Hidden field updated by Flow that generates Appeal Pieces. When Flow finishes, this is checked. Used in reporting and workflow.</inlineHelpText>
        <label>Pieces Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Driver__c</fullName>
        <label>Primary Driver</label>
        <picklist>
            <picklistValues>
                <fullName>Not Applicable</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaigns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MPT/Books</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Tracking/PBX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Reason_for_Cancellation__c</fullName>
        <label>Primary Reason for Cancellation</label>
        <picklist>
            <picklistValues>
                <fullName>Brand Compliancy/OEM Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change in Mgmt./Mgmt. Preference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cutting Expenses/Billing Redundancy   </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Import Accuracy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Import Turnaround from 3rd Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Import Turnaround - Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealership Closed/Sold </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functionality Sold Did Not Meet Specific Needs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General System Issues - Downtime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improper Resolution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insufficient Features</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Available Trainers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Communication </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Knowledgeable Representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of New Features</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Utilization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modification to Billing </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Contact - Dealer Unresponsive </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Payment/Forced Cancellation </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolution Timeline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Performance Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Too Expensive/Lower Competitive Rate </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buy/Sell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competive Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expense Reduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failure to Demo Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_to_be_Cancelled__c</fullName>
        <label>Product to be Cancelled</label>
        <picklist>
            <picklistValues>
                <fullName>Provision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conquest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction Genius</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KBB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Products_Canceled__c</fullName>
        <inlineHelpText>Temporary field used until Product Adjustment is ready.</inlineHelpText>
        <label>Products Canceled</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recurring_Lost__c</fullName>
        <label>Recurring Lost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Related_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Appeals</relationshipLabel>
        <relationshipName>Appeals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_POA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related POA</label>
        <referenceTo>POA__c</referenceTo>
        <relationshipLabel>Appeals</relationshipLabel>
        <relationshipName>Appeals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Appeals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>temp field used to audit appeals by maggie, will delete when completed</inlineHelpText>
        <label>Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sale_Date__c</fullName>
        <label>Sale Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Save_Revenue_Dollars__c</fullName>
        <label>Save Revenue Dollars</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Secondary_Driver__c</fullName>
        <label>Secondary Driver</label>
        <picklist>
            <picklistValues>
                <fullName>Not Applicable</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Availability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feature/Functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Stability</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Secondary_Reason_for_Cancellation__c</fullName>
        <inlineHelpText>For use when there is more than one reason for cancellation.</inlineHelpText>
        <label>Secondary Reason for Cancellation</label>
        <picklist>
            <picklistValues>
                <fullName>Brand Compliancy/OEM Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change in Mgmt./Mgmt. Preference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cutting Expenses/Billing Redundancy   </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Import Accuracy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Import Turnaround from 3rd Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Import Turnaround - Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealership Closed/Sold </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functionality Sold Did Not Meet Specific Needs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General System Issues - Downtime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improper Resolution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insufficient Features</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Available Trainers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Communication </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Knowledgeable Representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of New Features</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Utilization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modification to Billing </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Contact - Dealer Unresponsive </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Payment/Forced Cancellation </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolution Timeline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Performance Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Too Expensive/Lower Competitive Rate </fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Send_Cancellation_Email_wDep__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>check this box to send the cancellation notice with Deposit info to the cancel team</inlineHelpText>
        <label>Send Cancellation Email (w/Dep)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Cancellation_Email_w_o_Dep__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>check this box to send the cancellation notice w/o the deposit info (made just for Jill Tyson)</inlineHelpText>
        <label>Send Cancellation Email (w/o Dep)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TFS_ID__c</fullName>
        <label>TFS ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_on_System__c</fullName>
        <formula>(Date_Credited__c -  Dealership_Name__r.Implementation_Date__c )/30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>formula field that calculates the time the customer was on the system.  CX Effective Date less Inplementation Date (from Account)</inlineHelpText>
        <label># Months on System</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Credit__c</fullName>
        <label>Appeal Type</label>
        <picklist>
            <picklistValues>
                <fullName>Lost Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled Sale (Failure to Launch)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>